--- a/index.html
+++ b/index.html
@@ -13,16 +13,26 @@
 
 
 <div class ="slides">
-
-   <img src="https://www.imageupload.co.uk/images/2017/04/20/background.jpg" alt="">
-   <img src="https://www.imageupload.co.uk/images/2017/04/20/background.jpg" alt="">
-   <img src="https://www.imageupload.co.uk/images/2017/04/20/background.jpg" alt="">
-   
-</div>
+  
+  <div>
+    <h1> Evaluation in development processes and technical support</h1>
+	<a href="http://www.alcored.de/Parti/"><img src="https://www.imageupload.co.uk/images/2017/05/01/evaluacion.jpg" alt=""> </a>
+   </div>
+    <div>
+   <h1> Decision Making  <br/>Consultancy </h1>
+    <a href="http://www.alcored.de/Parti/"><img src="https://www.imageupload.co.uk/images/2017/05/01/proscons.jpg" alt=""> </a>
+       </div>
+   <div>	
+    <h1>Training  </h1>
+	<a href="http://www.alcored.de/Parti/"><img src="https://www.imageupload.co.uk/images/2017/05/01/entrenamiento.png" alt=""> </a>
+	  </div>
+  
+  
+  </div>
 </div>
 
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>  
-<script  src="jquery.slides.js"></script>
+<script  src="js/jquery.slides.js"></script>
 
 <script>
 
