--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta charset="UTF-8">
 <title>Document </title>
-<link rel="stylesheet" href="estilos.css" >
+<link rel="stylesheet" href="main.css" >
 <link rel="stylesheet"  href="fonts.css">
 </head>
 
