--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta charset="UTF-8">
 <title>Document </title>
-<link rel="stylesheet" href="main.css" >
+<link rel="stylesheet" href="estilos.css" >
 <link rel="stylesheet"  href="fonts.css">
 </head>
 
@@ -32,7 +32,7 @@
 </div>
 
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>  
-<script  src="js/jquery.slides.js"></script>
+<script  src="jquery.slides.js"></script>
 
 <script>
 
