--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
        </div>
    <div>	
     <h1>Training  </h1>
-	<a href="http://www.alcored.de/Parti/"><img src="https://www.imageupload.co.uk/images/2017/05/01/entrenamiento.png" alt=""> </a>
+	<a href="http://www.alcored.de/Parti/"><img src="https://www.imageupload.co.uk/images/2017/05/01/trainingofrmal.jpg" alt=""> </a>
 	  </div>
   
   
