--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+	
+	<!-- adding container -->
+	
+<div class= container>
+	
 <div class="main">
 
 
@@ -60,6 +65,7 @@ $(function(){
 });
 </script>
 
+	</div>
 
 </body>
 
