--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta charset="UTF-8">
-<meta name="viewreport" content="width=device-with, user-scalable=no, initial-scale=1.0,maximum-scale=1.0" >	
+<meta name="viewreport" content="width=device-with, user-scalable=no, initial-scale=1.0,minimum-scale=1.0" >	
 <title>Document </title>
 <link rel="stylesheet" href="estilos.css" >
 <link rel="stylesheet"  href="fonts.css">
