--- a/index.html
+++ b/index.html
@@ -3,23 +3,24 @@
 <head>
 
 <meta charset="UTF-8">
-<meta name="viewreport" content="width=device-width, user-scalable=no, initial-scale=1.0,minimum-scale=1.0" >	
 <title>Document </title>
 <link rel="stylesheet" href="estilos.css" >
 <link rel="stylesheet"  href="fonts.css">
 </head>
 
 <body>
-	
-
-	
+  <h2 > <img src= "https://www.imageupload.co.uk/images/2017/04/23/Alcored.jpg" width="70" heigth="65"  > </h2>
+  
+  <h4> <span class="icon-facebook2">  About us </h4>
+  
 <div class="main">
 
 
 <div class ="slides">
-  
+
+ 
   <div>
-    <h1> Evaluation in development processes and technical support</h1>
+        <h1> Evaluation in development processes and technical support</h1>
 	<a href="http://www.alcored.de/Parti/"><img src="https://www.imageupload.co.uk/images/2017/05/01/evaluacion.jpg" alt=""> </a>
    </div>
     <div>
@@ -64,9 +65,9 @@ $(function(){
 });
 </script>
 
-	
 
 </body>
 
 
 </html>
+
