--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h2 > <img src= "https://www.imageupload.co.uk/images/2017/04/23/Alcored.jpg" width="70" heigth="65"  > </h2>
   
-  
+  <h4> <span class="icon-facebook2">  About us </h4>
   
 <div class="main">
 
@@ -70,4 +70,3 @@ $(function(){
 
 
 </html>
-
