--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
 
 <body bgcolor="#000000">
 	
+	<header>
+
+<nav>
+
+	
+	
+	<ul>
+	
+		
+			<li><a href="#">About us </a></li>
+			<li><a href="#">Services</a></li>
+			<li><a href="#">Courses</a></li>
+			<li><a href="#">Tips</a></li>
+			<li><a href="#"> Contact</a></li>
+		
+		</ul>
+	</nav>
+
+	</header>
+
+	<section class="contenido wrapper">
+ 
+ </section>
+ 
 
 <div class="main">
 
