--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <nav>
 
-	
+	<!-- comentado 
 	
 	<ul>
 	
@@ -27,6 +27,7 @@
 			<li><a href="#"> Contact</a></li>
 		
 		</ul>
+-->
 	</nav>
 
 	</header>
