--- a/index.html
+++ b/index.html
@@ -15,19 +15,16 @@
 
 <nav>
 
-	<!-- comentado 
+	 
 	
 	<ul>
 	
 		
-			<li><a href="#">About us </a></li>
-			<li><a href="#">Services</a></li>
-			<li><a href="#">Courses</a></li>
-			<li><a href="#">Tips</a></li>
-			<li><a href="#"> Contact</a></li>
-		
+			<li><a href="#">Evaluation <br/>on Process</a></li>
+			<li><a href="#">Decision Making <br/> Consultancy</a></li>
+			<li><a href="#">Training</a></li>
+					
 		</ul>
--->
 	</nav>
 
 	</header>
