--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 	<ul>
 	
 		
-			<li><a href="#">Evaluation <br/>on Process</a></li>
-			<li><a href="#">Decision Making <br/> Consultancy</a></li>
+			<li><a href="#">Evaluation on Processes</a></li>
+			<li><a href="#">Decision Making Consultancy</a></li>
 			<li><a href="#">Training</a></li>
+		        
 					
 		</ul>
 	</nav>
