--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body bgcolor="#000000">
 	
-	<header>
+<!--	<header>
 
 <nav>
 
@@ -33,7 +33,7 @@
 	<section class="contenido wrapper">
  
  </section>
- 
+ -->
 
 <div class="main">
 
