--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
 
  
   <div>
-        <h1> Evaluation in development processes and technical support</h1>
+        <h1> Evaluation on development processes and technical support</h1>
 	<a href="http://www.alcored.de/Parti/"><img src="https://www.imageupload.co.uk/images/2017/05/01/evaluacion.jpg" alt=""> </a>
    </div>
     <div>
-   <h1> Decision Making  <br/>Consultancy </h1>
+   <h1> Decision Making <br/>Consultancy </h1>
     <a href="http://www.alcored.de/Parti/"><img src="https://www.imageupload.co.uk/images/2017/05/01/proscons.jpg" alt=""> </a>
        </div>
    <div>	
-    <h1>Training  </h1>
+    <h1> Technical <br/>Trainings  </h1>
 	<a href="http://www.alcored.de/Parti/"><img src="https://www.imageupload.co.uk/images/2017/05/01/trainingofrmal.jpg" alt=""> </a>
 	  </div>
   
