--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <a href="http://www.alcored.de/Parti/"><img src="https://www.imageupload.co.uk/images/2017/05/01/proscons.jpg" alt=""> </a>
        </div>
    <div>	
-    <h1> Classroom Training  </h1>
+    <h1> Training  </h1>
 	<a href="http://www.alcored.de/Parti/"><img src="https://www.imageupload.co.uk/images/2017/05/01/trainingofrmal.jpg" alt=""> </a>
 	  </div>
   
